--- a/validation.yml
+++ b/validation.yml
@@ -1,3 +1,5 @@
 rules:
   hurz:
     script: value.length < 5
+  email:
+    script: /^(([^<>()\[\]\.,;:\s@\"]+(\.[^<>()\[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i.test(value)
